fix: 🐛 menu items overflowing the screen

--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,7 @@
 }
 
 
-* {
-    box-sizing: border-box;
+body {
     font-family: "Raleway";
 }
 
@@ -22,26 +21,21 @@ header {
 
 #menu {
     display: flex;
-    font-size: large;
     flex-direction: row;
     align-items: center;
+    width: 400px;
 }
 
 .menu-btn {
-    min-width: 200px;
     text-align: center;
+    box-sizing: border-box;
+    font-size: large;
+    width: 50%;
 }
 
 @media screen and (min-width: 992px) {
-
-    #menu {
-        
-    }
-
     .menu-btn {
-        min-height: 100px;
         padding: 10%;
-        height: max-content;
     }
 
     .menu-btn:hover {
@@ -50,9 +44,7 @@ header {
     }
 }
 
-@media screen and (min-width: 768px) {
-    
-}
+@media screen and (min-width: 768px) {}
 
 @media screen and (max-width: 768px) {
     header {
